incluindo o jquery no projeto

--- a/index.html
+++ b/index.html
@@ -19,17 +19,10 @@
             <input type="text" id="nome-tarefa" required placeholder="Insira a tarefa" />
             <button type="submit">Adicionar tarefa</button>
         </form>
-        <table>
-            <thead>
-                <tr>
-                    <th>
-                        Tarefas
-                    </th>
-                </tr>
-            </thead>
-            <tbody>                
-            </tbody>
-        </table>
+        <ul>
+            <h2>Tarefas</h2>
+            <li>Limpar a casa</li>
+        </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> <!-sempre colocar o lik do jQuery antes do java pois desta forma conseguiremos rodas os comandos dele sem travar o java ->
     <script src="./main.js"></script>
