--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
         </ul>
     </div>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> <!-sempre colocar o lik do jQuery antes do java pois desta forma conseguiremos rodas os comandos dele sem travar o java ->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> <!--sempre colocar o lik do jQuery antes do java pois desta forma conseguiremos rodas os comandos dele sem travar o java -->
     <script src="./main.js"></script>
 </body>
 </html>
